--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
         <div id="post">
             <h1>Este es un título atractivo e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que pueden hacer con ramas</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam quaerat iste id animi, fugit minima sunt voluptatem? Quia nam tempora voluptatem necessitatibus laboriosam non enim tempore suscipit illo sunt.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis voluptatibus inventore reiciendis labore? Ut veritatis, corporis iste officiis nisi minus dignissimos quis saepe, magnam debitis quia harum commodi distinctio.</p>
         </div>
     </div>
 </body>
