--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog Maestro</span>
         </div>
         <div id="post">
             <h1>Este es un título atractivo e interesante del post</h1>
@@ -19,6 +19,7 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam quaerat iste id animi, fugit minima sunt voluptatem? Quia nam tempora voluptatem necessitatibus laboriosam non enim tempore suscipit illo sunt.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis voluptatibus inventore reiciendis labore? Ut veritatis, corporis iste officiis nisi minus dignissimos quis saepe, magnam debitis quia harum commodi distinctio.</p>
+            <p>Subscribete y dale like</p>
         </div>
     </div>
 </body>
